--- a/_posts/2020-03-27-Report.md
+++ b/_posts/2020-03-27-Report.md
@@ -48,10 +48,73 @@ P = VI
 
 전류는 전하된 물질의 이동에 의해 생성되는데, 전기회로는 한 지점에서 다른 지점으로 전하를 이동시키는 파이프라인이다. 시간에 대한 전하의 변화비가 전류이다.
 
-i(t) = dq/dt
+i(t) = dq / dt
 
-q(t) = 
+q(t)는 -∞ ~ t 까지 i(t)를 적분해주면 된다.
 
-$$
-a + b = c
-$$
+![]()
+
+#### 전류에 대한 규약
+
+* 통상적으로 전류의 흐름은 양 전하의 이동을 나타낸다.
+
+* 전하의 이동 방향을 나타내는 것이 꼭 필요하다.
+
+* 양의 전류값은 화살표 방향으로 전류가 흐름.(기준 방향) 음의 전류는 전류가 기준 방향보다 반대 방향으로 흐르는 것을 나타낸다.
+
+* 표기 할 때는 시작과 끝 지점으로 기호로 a가 시작, b가 끝이면 Iab로 나타내고 반대 방향은 -기호를 붙이는 것으로 표현한다.
+
+![]()
+
+#### 전압에 대한 규약
+
+* 1C의 전하가 한 지점에서 다른 지점으로 움직일 때, 1J의 에너지를 획득한다면 두 지점의 전위차가 1V이다.
+* 전압은 항상 상대적인 값, 즉 두 지점의 전압차로 측정된다.
+* 전압은 항상 기준점에 대한 상대적인 값이다.
+
+![]()
+
+#### 에너지(Energy)
+
+* 전압은 단위 전하 당 에너지의 측정단위이다.
+* 전압차가 있는 두 지점 사이를 움직이는 전하는 에너지를 방출하거나 흡수한다.(즉, 에너지가 한 지점에서 다른 지점으로 이동된다.)
+
+예를 들어 배터리로 전구를 킬 때, 배터리에 저장된 에너지는 램프의 필라멘트를 달구어 열과 빛을 발산한다. 배터리는 에너지를 공급하고 램프는 에너지를 흡수한다. 에너지의 전달과정 만이 존재한다.
+
+![]()
+
+#### 회로 소자
+
+전압원과 전류원이 존재
+
+전압원 : 규정된 전압을 유지한다.
+
+독립전압원 - 전압원의 전압이 회로 다른 부분에 영향을 받지 않음.
+
+종속전압원 - 전압원의 전압이 회로 다른 부분의 전압이나 전류에 의해 결정되는 것
+
+(회로 다른 부분의 전압에 영향을 받냐 전류에 영향을 받냐에 따라 두 종류로나뉨) 
+
+![](https://drive.google.com/uc?id=1xWVbfi0m7XxGIGj2guTL0g9nn9Yw0QxI)
+
+![]()
+
+전류원 : 단자 양단 전압에 관계 없이 흐르는 전류를 규정된 값으로 유지
+
+독립전류원 - 잔류원의 전류가 회로 다른 부분에 영향을 받지 않음.
+
+종속전류원 - 전류원의 전류가 회로 다른 부분의 전압이나 전류에 의해 결정됨.
+
+(전압원과 마찬가지로 전압, 전류 영향에 따라 두 종류가 있음)
+
+![](https://drive.google.com/uc?id=1RZDDaAN5vcMkFUnpcljrx-QaVM4XwpJM)
+
+![]()
+
+독립전압원(왼쪽)과 독립전류원(오른쪽) 그림
+
+![](https://drive.google.com/uc?id=1YByb5B0hEbR1arUSd--8oRgTmNw3dVfp)
+
+![]()
+
+그림에 나온 기호 중 마이크로와 베타는 비례상수이고 r은 저항값, g는 저항의 역수(conductance)를 의미한다.
