--- a/_posts/2020-04-09-Strassen.md
+++ b/_posts/2020-04-09-Strassen.md
@@ -1,11 +1,12 @@
 ---
 layout: single
 title: Strassen Algorithm
+use_math: true
 data: 2020-04-09 19:51:00 +0900
 author: Sun Woo, Jang
 ---
 
+$$
+A+B=C
+$$
 
-$$
-A+B
-$$
