--- a/_posts/2020-04-09-Strassen.md
+++ b/_posts/2020-04-09-Strassen.md
@@ -15,7 +15,7 @@ author: Sun Woo, Jang
 
 ### 일반적인 행렬 곱셈
 
-![](C:\Users\wkdtj\my-awesome-site\assets\image\matrix.png)
+![](C:\Users\wkdtj\my-awesome-site\assets\image\Pentakill.jpg)
 
 일반적으로 행렬의 곱셈을 할 경우에는 아래와 같이 곱셈을 8번하고 덧셈을 4번한다.
 
