--- a/_posts/2020-04-09-Strassen.md
+++ b/_posts/2020-04-09-Strassen.md
@@ -15,7 +15,11 @@ author: Sun Woo, Jang
 
 ### 일반적인 행렬 곱셈
 
-![](C:\Users\wkdtj\my-awesome-site\assets\image\Pentakill.jpg)
+행렬 A $\begin{bmatrix} A_{1,1} & A_{1,2} \\ A_{2,1} & A_{2,2} \end{bmatrix}$
+
+행렬 B $\begin{bmatrix} B_{1,1} & B_{1,2} \\ B_{2,1} & B_{2,2} \end{bmatrix}$
+
+이 두 행렬의 곱을 행렬 C $\begin{bmatrix} C_{1,1} & C_{1,2} \\ C_{2,1} & C_{2,2} \end{bmatrix}$
 
 일반적으로 행렬의 곱셈을 할 경우에는 아래와 같이 곱셈을 8번하고 덧셈을 4번한다.
 
